syntax = "proto3";

service Charts {
	rpc GetStock(Request) returns (Chart) {}
	rpc GetInvestor(Request) returns (Chart) {}
	rpc GetPortfolio(Request) returns (Chart) {}
}

message Request {
	string uuid = 1;
	string range = 2;
}

message Chart {
	repeated Point points = 1;
	int64 minTime = 2;
	int64 maxTime = 3;
}

message Point {
	int64 time = 1;
	float value = 2;
}